Pacmac Manager: search entry icon visibility fixed.

--- a/Teal-Sea-Light/gtk-3.0/gtk.css
+++ b/Teal-Sea-Light/gtk-3.0/gtk.css
@@ -5080,10 +5080,11 @@ headerbar entry image:hover {
 
   color: inherit; }
 
-headerbar entry:focus image {
-
-  color: @colour_136;
-  }
+/* Pacmac search entry icon colour. */
+headerbar entry:focus image
+{
+    color: @colour_103;
+}
 
 headerbar entry progress {
 
